Revert "Rebase refactorization into Folia"
This reverts commit 55acb66401e926e78ca787ea614b7980a6e52c9c.